# argument_parser

./: .clang-format  CMakeLists.txt  README.md  codecov.yaml
.github/workflows/: install.yml  macos.yml  sanitizers.yml  style.yml  test_coverage.yml  ubuntu.yml  windows.yml
cmake/: tools.cmake
include/: argument_parser.hpp
test/: CMakeLists.txt
test/coverage/: CMakeLists.txt  prepare_to_upload.py  to_single_cpp.py
test/include/: argument_tester.hpp
test/source/: argument_tester.hpp  counter.cpp  flag.cpp  greeter.cpp  main.cpp  single_flag.cpp  value.cpp  values.cpp
